--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2595,6 +2595,13 @@ libraspberrypi0:
   ubuntu:
     apt:
       packages: [libraspberrypi0]
+libraspberrypi-dev:
+  debian:
+    apt:
+      packages: [libraspberrypi-dev]
+  ubuntu:
+    apt:
+      packages: [libraspberrypi-dev]
 libraw1394-dev:
   arch:
     pacman:
